--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
 <head>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F9C3P0MVF5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-F9C3P0MVF5');
+  </script>
+
   <meta charset="utf-8">
   <title>Portafolio</title>
   <base href="/">
+  <meta name="description" content="Portafolio de maquetador web Endika Llonin Abasolo. Especialista en maquetación con Html, Css y Javascript.">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/rawline" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/rawline" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
