Added correct baseURL to index.html for GITHUB PAGES

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <meta charset="utf-8">
   <title>Portafolio</title>
-  <base href="/">
+  <base href="./">
   <meta name="description" content="Portafolio de maquetador web Endika Llonin Abasolo. Especialista en maquetación con Html, Css y Javascript.">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1">
