updated file cv-pdf

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <title>Portafolio</title>
   <base href="./">
-  <meta name="description" content="Portafolio de maquetador web Endika Llonin Abasolo. Especialista en maquetación con Html, Css y Javascript.">
+  <meta name="description" content="Portafolio de Endika Llonin Abasolo, especialista en maquetación y desarrollo frontend con Html, Css, Javascript y Typescript.">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
